@@ -5,6 +5,7 @@
 * Introduced improved repr for ``Page``, ``Title``, ``Placeholder`` and ``CMSPlugin`` models.
 * Fixed a regression which prevented users from setting a redirect to the homepage.
 * Fixed a bug where the add page endpoint rendered ``Change page`` as the html title.
+* Fixed an issue where non-staff users could request the wizard create endpoint.
 
 
 === 3.4.4 (unreleased) ===
